# pycparser

./: .expected.r  .git-blame-ignore-revs  .gitignore  LICENSE  README.rst  pyproject.toml  sly_cparser.out
cparsing/: __init__.py  _main.py  _typing_compat.py  c_ast.py  c_lexer.py  c_parser.py  ruff.toml  utils.py
cparsing/sly/: __init__.py  lex.py  yacc.py
cparsing/tests/: conftest.py  example_ast.py  example_gen.py  ruff.toml  test_c_ast.py  test_c_lexer.py  test_c_parser.py  test_c_unparser.py
examples/: c-to-c.py  c_json.py  cdecl.py  construct_ast_from_scratch.py  dump_ast.py  explore_ast.py  func_calls.py  func_defs.py  func_defs_add_param.py  rewrite_ast.py  serialize_ast.py  using_cpp_libc.py  using_gcc_E_libc.py
pycparser/cparsing/: ast_c.py  clexer.py  cparser.py  example.py  example_ast.py  example_gen.py  lexer_c.py  parser_c.py  test_ast_c.py  test_clexer.py  test_cparser.py  test_lexer_c.py  test_parser_c.py
pycparser/sly/: lex.py  yacc.py
pycparser/sly/cparsing/: clexer.py  cparser.py  example.py  test_clexer.py  test_cparser.py
src/cparsing/: __init__.py  _cluegen.py  _typing_compat.py  c_ast.py  c_context.py  c_lexer.py  c_parser.py  utils.py
tests/: conftest.py  test_lexer.py  test_parser.py  test_unparser.py
tests/parser/: test_coords.py  test_fundamentals.py  test_integration.py  test_parser.py  test_typedef_name_problem.py
utils/benchmark/: benchmark-parse.py
utils/internal/: fake_includes.py  make_fake_typedefs.py  memprofiling.py  zc.c
