[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cparsing"
description = "A pure-python C parser, made with sly. Based heavily on pycparser. A work in progress."
version = "0.1.0"
requires-python = ">=3.9"
readme = "README.rst"
license = "BSD-3-Clause"
authors = [
    { name = "Sachaa-Thanasius", email = "111999343+Sachaa-Thanasius@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
dependencies = [
    "sly @ git+https://github.com/Sachaa-Thanasius/sly@modernization",
]

[project.urls]
Homepage = "https://github.com/Sachaa-Thanasius/pycparser"

[tool.hatch.build.targets.wheel]
packages = ["src/cparsing"]

[tool.hatch.metadata]
allow-direct-references = true


# ---- Testing config

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.hatch-test]
extra-dependencies = ["covdefaults"]

[tool.pytest.ini_options]
pythonpath = "src"
addopts = ["--strict-markers", "--strict-config"]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["cparsing", "tests"]
omit = ["tests/conftest.py"]

[tool.coverage.paths]
cparsing = ["src"]

[tool.coverage.report]
exclude_lines = ["^\\s*(?:el)?if TYPE_CHECKING:$"]


# ---- Linting config

[tool.ruff]
include = ["src/cparsing/*.py", "tests/**/*.py"]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
typing-modules = ["src/cparsing/_typing_compat.py"]
select = [
    "F",
    "E",
    "I",
    "UP",
    "YTT",
    "ANN",
    "S",
    "BLE",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "EM",
    "ISC",
    "G",
    "INP",
    "PIE",
    "T20",
    "PYI",
    "PT",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "ERA",
    "PL",
    "TRY",
    "RUF",
]
extend-ignore = [
    "S101",   # Use of assert here is a known quantity for typing cases. All uses should be safe to optimize out.
    "SIM105", # Suppressable exception. contextlib.suppress is a stylistic choice with overhead.
    "C90",    # McCabe complexity.
    "ANN101", # Type of Self for self is usually implicit and/or known by the type-checker.
    "ANN102", # Type of type[Self] for cls is usually implicit and/or known by the type-checker.
    "ANN204", # Special method return types are usually implicit and/or known by type checker.
    "ANN401", # Any is needed for some parameters.
    "UP038",  # isinstance performs better with tuples than unions.
    "PT001",  # pytest recommends against empty parentheses on pytest.fixture.
    "PYI036", # Bug with annotations for __exit__.
    "PD011",  # Erroneous issue that triggers for any .values attribute access at all.
    # Recommended by Ruff when using Ruff format.
    "E111",
    "E114",
    "E117",
    "COM812",
    "COM819",
    "E501",
    "ISC001",
    "ISC002",
    # -- Project-specific rules.
    "PLR",    # It's a C parser; it's going to be complex.
    "ERA001", # Leave commented code alone.
    "SIM108", # Readability: Don't always shorten to ternary.
    "RUF002", # Leave my en dashes alone.
    "PTH123", # Builtin open() is fine.
    # Readability: Allow else and elif after return, raise, and continue.
    "RET505",
    "RET506",
    "RET507",
]
unfixable = [
    "ERA", # Prevent unlikely erroneous deletion.
]

[tool.ruff.lint.isort]
lines-after-imports = 2
combine-as-imports = true

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.ruff.lint.per-file-ignores]
# -- Package code
"**/__init__.py" = [
    # Ruff doesn't understand using star imports to export names in a package.
    "F403",
    "F405",
]
"src/cparsing/c_*.py" = [
    "RUF012", # Mutable class attributes; most use cases are cluegen-related and they should be safe.
]
"src/cparsing/c_lexer.py" = [
    "F811",   # Redefining methods within Lexer/Parser subclasses is allowed because of metaclass hackery.
    "F821",   # Undefined names within Lexer/Parser subclasses are allowed because of metaclass hackery.
    "ANN201", # Allow missing return annotations for public functions. Not helpful for match action or production functions.
]
"src/cparsing/c_parser.py" = [
    # See reasoning above.
    "F811",
    "F821",
    "ANN201",
]

# -- Everything else
"utils/*.py" = [
    "T201",   # Allow printing.
    "INP001", # Allow namespace packages.
]
"tests/*.py" = [
    # See reasoning above.
    "RUF012",
    "F811",
    "F821",
    "T201",   # Allow printing.
    "ANN201", # Tests return None usually.
]
"examples/*.py" = [
    # See reasoning above.
    "RUF012",
    "F811",
    "F821",
    "T201",
    "ANN201",
    "ANN001", # Ignore missing parameter annotations as well.
    "INP001", # Allow namespace packages.
]


# ---- Type-checking config

[tool.pyright]
include = ["src/cparsing"]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "strict"

reportPrivateUsage = "none"                    # We're the package; of course we're accessing internals.
reportUnnecessaryIsInstance = "none"           # We should account for garbage input from users.
reportUninitializedInstanceVariable = "none"   # Nice as an infrequent checkup, but usually noisy.
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImportCycles = "none"                    # Nice as an infrequent checkup, but "if TYPE_CHECKING" causes false positives.
reportPropertyTypeMismatch = "error"
reportShadowedImports = "error"
reportUnnecessaryTypeIgnoreComment = "warning"
